# detective-dossier-app

./: .gitignore  README.md  add_git_to_path.ps1  build_exe.bat  compile_to_exe.ps1  desktop_app.py  index.html  package-lock.json  package.json  requirements.txt  vite.config.ts
app_data/: detective_dossier.sqlite
backend/: ai_service.py  analysis.py  app.py  database.py  destiny_matrix_service.py  matrix.py  models.py  pdf_service.py
release/ArchiveInvestigations/_internal/backend/: chakra_analysis.py
release/ArchiveInvestigations/_internal/fastapi-0.118.0.dist-info/: RECORD
release/ArchiveInvestigations/_internal/numpy-2.3.5.dist-info/: RECORD
release/ArchiveInvestigations/_internal/uvicorn-0.37.0.dist-info/: RECORD
release/ArchiveInvestigations/_internal/websockets-16.0.dist-info/: RECORD
scripts/: cleanup_tihiy_uzel_duplicates.py  fix_tihiy_uzel_utf8.py
src/: App.tsx  main.tsx  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: dossier_service.rs  mod.rs
src-tauri/src/commands/: handlers.rs
src-tauri/src/domain/: models.rs
src-tauri/src/infrastructure/: db.rs  mod.rs  pdf.rs
src/components/: AISettingsPanel.tsx  ArchiveSearchPanel.tsx  AutoBriefPanel.tsx  CaseGraphPanel.tsx  DestinyMatrixPanel.tsx  DossierCard.tsx  LiveBoardPanel.tsx  MatrixComparePanel.tsx  PeopleRegistryPanel.tsx  PhotoUploadField.tsx  RelationshipSearchPanel.tsx  Sidebar.tsx  StatusPill.tsx  SuspectList.tsx
src/styles/: app.css
src/utils/: destinyMatrix.ts
