[package]
name = "detective-dossier"
version = "0.1.0"
description = "Desktop dossier application for investigations"
authors = ["OpenAI"]
edition = "2021"

[lib]
name = "detective_dossier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1.1", features = [] }
thiserror = "1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
printpdf = "0.8"
image = "0.25"
anyhow = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
